data/derived/fa15/progs/unify/prog2394.ml.out
Characters 129-131:
  | Sine(t) -> "sin(pi*" ^ exprToString ex ^ ")"
                                        ^^
Error: This expression has type expr -> string
       but an expression was expected of type expr
